[package]
name = "echo"
version = "0.1.0"
edition = "2021"
description = "A simple HTTP server that echoes the request body. It optionally adds a header field to the response."

[dependencies]
anyhow = "1.0.89"
clap = { version = "4.5.3", features = ["derive"] }
env_logger = "0.11.5"
http-body-util = "0.1.1"
hyper = { version = "1.2.0", features = ["http1", "server"] }
hyper-util = { version = "0.1.3", features = ["http1", "server", "tokio"] }
log = "0.4.22"
socket2 = "0.5.7"
tokio = { version = "1.36.0", features = ["full"] }
