[package]
name = "echo"
version = "0.1.0"
edition = "2021"
description = "A simple HTTP server that echoes the request body. It optionally adds a header field to the response. Heavily inspired by https://github.com/TechEmpower/FrameworkBenchmarks/blob/master/frameworks/Rust/hyper/"

[dependencies]
anyhow = "1.0.89"
axum = "0.8.1"
clap = { version = "4.5.3", features = ["derive"] }
hyper = "1.8.1"
hyper-util = { version = "0.1.19", features = ["tokio", "server-auto", "http1"] }
log = "0.4.25"
tokio = { version = "1.36.0", features = ["full"] }
tower = { version = "0.5.2", features = ["util"] }
tracing = "0.1.44"
tracing-subscriber = { version = "^0.3.16", features = ["env-filter"] }
